--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,7 @@
 FROM node:10-alpine
-
-WORKDIR /usr/src/app
-
-COPY package*.json ./
-
+WORKDIR /app
+COPY package*.json /app
 RUN npm install
-
 COPY . .
-
 EXPOSE 3001
-
 CMD ["node", "server.js"]
