--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,25 @@
-FROM node:10-alpine
+FROM node:10.24.1-alpine3.11
 WORKDIR /app
-COPY package*.json /app
+COPY package.json package-lock.json /app
 RUN npm install
 COPY . .
 EXPOSE 3001
 CMD ["node", "server.js"]
+
+FROM node:14.21.3-alpine3.17 AS build
+RUN apk add dumb-init
+WORKDIR /app
+COPY package.json package-lock.json /app
+RUN npm install
+COPY /public /app/public
+COPY /src /app/src
+RUN npm run build
+
+FROM node:14.21.3-alpine3.17
+RUN npm install -g serve
+ENV NODE_ENV production
+COPY --from=build /usr/bin/dumb-init /usr/bin/dumb-init
+USER node
+WORKDIR /app
+COPY --chown=node:node --from=build /app/build /app/build
+CMD ["dumb-init", "serve", "-s", "build"]
