--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,25 +1,16 @@
-FROM node:10.24.1-alpine3.11
-WORKDIR /app
-COPY package.json package-lock.json /app
-RUN npm install
-COPY . .
-EXPOSE 3001
-CMD ["node", "server.js"]
-
-FROM node:14.21.3-alpine3.17 AS build
+FROM node:10.24.1-alpine3.11 AS build
 RUN apk add dumb-init
 WORKDIR /app
 COPY package.json package-lock.json /app
 RUN npm install
-COPY /public /app/public
-COPY /src /app/src
-RUN npm run build
 
-FROM node:14.21.3-alpine3.17
-RUN npm install -g serve
+FROM node:10.24.1-alpine3.11
 ENV NODE_ENV production
 COPY --from=build /usr/bin/dumb-init /usr/bin/dumb-init
 USER node
 WORKDIR /app
-COPY --chown=node:node --from=build /app/build /app/build
-CMD ["dumb-init", "serve", "-s", "build"]
+COPY --chown=node:node --from=build /app/node_modules /app/node_modules
+COPY --chown=node:node /models /app/models
+COPY --chown=node:node /routes /app/routes
+COPY --chown=node:node server.js /app
+CMD ["dumb-init", "node", "server.js"]
